# clarifai-hs

./: .gitignore  ChangeLog.md  LICENSE  README.md  clarifai.cabal  package.yaml  stack.yaml
Network/: Clarifai.hs  Utilities.hs
apps/inputs/: Main.hs
examples/inputs/: Main.hs
examples/predictions/: Main.hs
src/Network/: Clarifai.hs  Utilities.hs
src/Network/Clarifai/: V1.hs  V2.hs
src/Network/Clarifai/V1/: API.hs  README.md  Utilities.hs
src/Network/Clarifai/V2/: API.hs  ClarifaiModels.hs  Models.hs  Types.hs  Utilities.hs
src/Network/Clarifai/V2/API/: Inputs.hs  Models.hs
src/Network/Clarifai/V2/Internal/: JsonUtilities.hs  Request.hs  Types.hs
src/Network/Clarifai/V2/Types/: Base.hs  Inputs.hs  Models.hs
test/: Helpers.hs  InputsTests.hs  Spec.hs
test/data/: basic_input.json  concepts_input.json  metadata_input.json
