name:                clarifai
version:             0.2.0.0
synopsis:            API Client for the Clarifai API.
description:         Provides functionality for interacting with Clarifai's
                     Image Tagging API. Users need a Clarifai account to use
                     this, as the endpoints require an access token.
license:             MIT
license-file:        LICENSE
author:              Joseph Canero
maintainer:          caneroj1@tcnj.edu
category:            Network
build-type:          Simple
copyright:           Copyright: (c) 2017 Joe Canero
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/caneroj1/clarifai-hs

library
  exposed-modules:     Network.Clarifai.V1
                     , Network.Clarifai.V2
                     , Network.Clarifai.V2.API.Inputs
                     , Network.Clarifai.V2.Types.Base
                     , Network.Clarifai.V2.Types.Inputs
                     , Network.Clarifai.V2.Models
  other-modules:       Network.Clarifai.V1.API
                     , Network.Clarifai.V1.Utilities
                     , Network.Clarifai.V2.API
                     , Network.Clarifai.V2.Internal.JsonUtilities
                     , Network.Clarifai.V2.Internal.Request
                     , Network.Clarifai.V2.Types
                     , Network.Clarifai.V2.Utilities
  build-depends:       base >= 4.6 && < 5,
                       wreq >= 0.4.1.0,
                       lens >= 4.13,
                       aeson,
                       either,
                       lens-aeson >= 1.0.0.5,
                       bytestring >= 0.10.6.0,
                       containers >= 0.5.6.2,
                       text >= 1.2.1.3,
                       http-client >= 0.4.26.2,
                       scientific >= 0.3.3.8,
                       transformers,
                       unordered-containers >= 0.2.5.1,
                       HTTP >= 4000.2.22,
                       easy-file >= 0.2.1,
                       vector >= 0.11.0.0,
                       text-conversions,
                       text,
                       data-default-class,
                       base64-bytestring,
                       http-types,
                       time
  hs-source-dirs: src
  default-language:    Haskell2010

test-suite clarifai-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       InputsTests
                     , Helpers
  main-is:             Spec.hs
  build-depends:       base
                     , clarifai
                     , HUnit
                     , aeson
                     , bytestring
                     , lens
                     , text
                     , time
                     , unordered-containers
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable predictions-exe
  hs-source-dirs:      examples/predictions
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clarifai
  default-language:    Haskell2010

executable inputs-exe
  hs-source-dirs:      examples/inputs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clarifai
                     , lens
                     , aeson
                     , base64-bytestring
                     , text-conversions
                     , bytestring
  default-language:    Haskell2010